# meridian

./: .gitignore  README.md
.github/workflows/: swift.yml
bazel/: defs.bzl
docs/: declarative_worker_spec.md  framework.md  uiview-wasm-serde-oneof-issue.md
examples/: declarative_worker.ts  declarative_worker_contract.ts
examples/uiview-demo/: BUILD.bazel  README.md  demo.js  index.html  panels.textproto
java/descriptors/: BUILD.bazel  BundleLoader.java  BundleWatcher.java  PanelRenderer.java  ProtoPaths.java  RequestBuilder.java  RpcRegistry.java
java/http/: BUILD.bazel  JsonRpcGateway.java  StaticFileHandler.java
java/javafx/: BUILD.bazel  DescribedLroCard.java  DescribedTableCard.java  JavaFxPanelRenderer.java  LroCard.java  MeridianTheme.java
java/ui/: BUILD.bazel  UiBusy.java  UiCard.java
proto/: BUILD.bazel
rust/: BUILD.bazel  Cargo.toml  README.md
rust/egui-demo/: BUILD.bazel  Cargo.toml
rust/egui-demo/src/: main.rs
rust/tui/: BUILD.bazel  Cargo.toml  build.rs
rust/tui-demo/: BUILD.bazel  Cargo.toml
rust/tui-demo/src/: main.rs
rust/tui/src/: invoker.rs  lib.rs  llm_prompt.rs  prompt.rs  state.rs  theme.rs  widget.rs
rust/uiview/: BUILD.bazel  Cargo.toml  build.rs
rust/uiview/proto_third_party/google/api/: field_behavior.proto
rust/uiview/src/: lib.rs  paths.rs  render.rs  request.rs  wasm_api.rs
src/: workers.ts
swift/: BUILD.bazel
swift/Sources/MeridianUI/: BundleLoader.swift  Context.swift  Descriptors.swift  JSONValue.swift  PanelState.swift  Render.swift  RequestBuilder.swift  RpcInvoker.swift  Theme.swift
swift/Sources/MeridianUI/Views/: PanelContainerView.swift  PlaceholderPanelView.swift  TablePanelView.swift
