# Cargo workspace for Meridian's Rust UI surface.
#
# Layout:
#   uiview/         — platform-neutral core. Prost-generated proto
#                     types for meridian.ui.v1, ProtoPaths field
#                     accessor, RequestBuilder, scoring helpers.
#                     Optional `wasm` feature exposes wasm-bindgen
#                     wrappers consumed by the TS web renderer.
#   tui/            — ratatui-based renderer. Consumes `uiview` as a
#                     pure Rust dep; no wasm boundary.
#   tui-demo/       — example binary mounting a hardcoded
#                     PanelDescriptor with mocked data. Shows the
#                     framework rendering end-to-end in a terminal.
#
# Build:
#   cargo build              — native build of every crate.
#   cargo run -p meridian-tui-demo
#                            — launch the TUI demo.
#   wasm-pack build uiview --features wasm
#                            — produce the wasm bundle the TS
#                              renderer imports (Stage 2).
#
# Bazel integration is deferred — until rules_rust + rules_wasm are
# wired into MODULE.bazel, the Rust tree is plain cargo. Consumers
# that need Bazel can hoist later.
[workspace]
resolver = "2"
members = [
    "uiview",
    "tui",
    "tui-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattmarshall/meridian"

[workspace.dependencies]
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# wasm-bindgen + js-sys + serde-wasm-bindgen are pulled in only when
# the uiview crate's `wasm` feature is enabled.
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
