[package]
name = "meridian-tui-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Demo binary rendering a hardcoded Meridian PanelDescriptor in a terminal."
publish = false

[dependencies]
meridian-uiview = { path = "../uiview" }
meridian-tui = { path = "../tui" }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
