[package]
name = "meridian-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ratatui-based renderer for Meridian PanelDescriptors."

[dependencies]
meridian-uiview = { path = "../uiview" }
ratatui = { workspace = true }
crossterm = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
